gitops/overlays/local/celery-exporter-fastapi-config-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-exporter-fastapi
  namespace: app
spec:
  template:
    spec:
      containers:
        - name: celery-exporter
